<resources>
    <string name="app_name">iHearU</string>
    <string name="emergency_msg">Scroll all three sliders to the right to send a message to your emergency contacts, or click the reset button to reset the sliders. Only when all three are to the right will the Confirm button pop up.</string>
    <string name="emergency_title">Report Emergency</string>
    <string name="app_title">iHearU</string>
    <string name="logo_desc">iHearU Logo</string>
    <string name="confirm">Confirm</string>
    <string name="your_profile">Your Profile</string>
    <string name="background_info">We\'ll need some background information to provide the best support we can.</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile">Profile</string>
    <string name="ihearu_logo">iHearU Logo</string>
    <string name="reset">Reset</string>
    <string name="title_activity_contact">ActivityContact</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_test">Test</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="create_profile_warning">Please create your profile first, including your name, danger phrase, and emergency message.</string>
    <string name="callSwitchText">Call: </string>
    <string name="textSwitchText">Text: </string>
    <string name="emailSwitchText">Email:</string>
    <string name="actionsTitle">Actions</string>
    <string name="email_address_hint">Email Address *</string>
    <string name="name_hint">Name *</string>
    <string name="phone_number_hint">Phone Number *</string>
    <string name="contact_information_title">Contact Information</string>
    <string name="recognize_microphone">Recognize Microphone</string>
    <string name="preparing">Preparing recognizer</string>
    <string name="starting">Starting</string>
    <string name="stop_file">Stop File</string>
    <string name="recognize_file">Recognize File</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="say_something">Say Something</string>

    <string name="kws_caption">To start demonstration say \"oh mighty computer\".</string>
    <string name="menu_caption">Say \"digits\", \"forecast\" or \"phones\" to choose the grammar, language model or phonetic decoder example.</string>
    <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
    <string name="forecast_caption">To try recognition of a weather forecast like \"sunny spells on Wednesday\".</string>
    <string name="phone_caption">To try phonetic recognition say anything.</string>
    <string name="caution_message">This model is prone to false alarms! Nothing is perfect, especially something as subjective as voice recognition that even humans have trouble deciphering. Don\'t make your Danger Phrase anything that\'s too common, and always be vigilant with such a tool.</string>

</resources>