<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAddContact"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarContainer"
        android:theme="@style/Theme.IHearU.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/material_dynamic_primary40"
            android:elevation="4dp"
            android:theme="@style/BarTheme"
            app:title="New Contact"
            >
            <!--                        TODO INSERT LOGO THRU IMAGEVIEW-->
<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content" />-->
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbarContainer"
        app:layout_constraintHorizontal_weight="1"
        android:orientation="vertical"
        android:id="@+id/inputLayouts">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_information_title"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/helvetica_bold"
            android:textSize="32sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp">
            <EditText
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:id="@+id/nameField"
                android:minHeight="50dp"
                android:layout_weight="50"
                android:inputType="textAutoCorrect"
                android:autofillHints="name"
                android:layout_gravity="center_horizontal"
                android:hint="@string/name_hint"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_weight="50"
                android:inputType="numberSigned"
                android:id="@+id/numberField"
                android:autofillHints="phone"
                android:maxLength="10"
                android:layout_gravity="center_horizontal"
                android:hint="@string/phone_number_hint"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            >
            <EditText
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_weight="50"
                android:id="@+id/emailField"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:layout_gravity="center_horizontal"
                android:hint="@string/email_address_hint"/>
        </LinearLayout>



    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/inputLayouts"
        android:layout_marginTop="20sp"

        app:dividerColor="@color/black"
        android:id="@+id/divider"/>

    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actionsTitle"
            android:layout_marginBottom="15sp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/helvetica_bold"
            android:textSize="32sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailSwitchText"

                android:textColor="@color/black"
                android:textSize="27sp"
                android:fontFamily="@font/helvetica_bold"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/doEmail"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textSwitchText"
                android:textColor="@color/black"
                android:textSize="27sp"
                android:fontFamily="@font/helvetica_bold"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/doText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callSwitchText"
                android:textColor="@color/black"
                android:textSize="27sp"
                android:fontFamily="@font/helvetica_bold"

                />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/doCall"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>